# IsoformX

./: .gitignore  README.md  TEST_SCRIPTS_README.md  USAGE_EXAMPLES.md  annotation_example.sh  annotation_example_annotated.gff3  annotation_example_antisense.gff3  annotation_example_isoforms.gff3  annotation_example_novel_high_conf.gff3  environment.yml  extract_example_data.py  proportion_example.sh  pyproject.toml  quick_start.sh  quick_test.sh  quick_test_elongating.gff3  quick_test_mock.gff3  quick_test_polyadenylation.gff3  test_debug.py  test_example_data.sh  test_real_data.py  test_real_isoforms.gff3
results/: sample13_elongating_isoforms.gff3  sample13_polyadenylation_isoforms.gff3
src/isoformx/: __init__.py  annotate.py  cli.py  cluster.py  consensus.py  io.py  models.py  proportion.py  score.py  utils.py
tests/: test_cluster.py  test_distance.py
